[gd_scene load_steps=8 format=2]

[ext_resource path="res://overworld/scenes/eart/roomMove.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://overworld/scenes/eart/objectSetDepth.gd" type="Script" id=3]
[ext_resource path="res://overworld/player/side/img/idle/Untitled.png" type="Texture" id=4]
[ext_resource path="res://overworld/textFunctions/TextStuff.tscn" type="PackedScene" id=5]
[ext_resource path="res://overworld/scenes/eart/textStuff.gd" type="Script" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "downLeft",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "upRight",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "upLeft",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "downRight",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "down",
"speed": 5.0
} ]

[node name="World" type="Node2D"]

[node name="Objects" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Player" type="KinematicBody2D" parent="Objects"]
position = Vector2( 639.665, 368.832 )
script = ExtResource( 1 )

[node name="PlayerSprite" type="AnimatedSprite" parent="Objects/Player"]
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 1 )
animation = "upLeft"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Objects/Player"]
polygon = PoolVector2Array( 16, 16, 0, 0, -16, 16, 0, 32 )

[node name="interact" type="Area2D" parent="Objects/Player"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Objects/Player/interact"]
polygon = PoolVector2Array( 6, 0, 0, -6, -6, 0, 0, 6 )

[node name="object" type="StaticBody2D" parent="Objects"]
position = Vector2( 336.842, 191.869 )
scale = Vector2( 100, 64 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Objects/object"]
polygon = PoolVector2Array( 1, 0, 1, 1, -1, 1, -1, 0 )

[node name="MeshInstance2D" type="Sprite" parent="Objects/object"]
scale = Vector2( 0.031, 0.031 )
texture = ExtResource( 2 )

[node name="object_Interact" type="StaticBody2D" parent="Objects"]
position = Vector2( 662.135, 194.51 )
scale = Vector2( 32, 32 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Objects/object_Interact"]
polygon = PoolVector2Array( 1, 0, 1, 1, -1, 1, -1, 0 )

[node name="MeshInstance2D" type="Sprite" parent="Objects/object_Interact"]
scale = Vector2( 0.031, 0.031 )
texture = ExtResource( 2 )

[node name="World" type="Node2D" parent="."]

[node name="rigid" type="StaticBody2D" parent="World"]
position = Vector2( 562.495, 55.8927 )
scale = Vector2( 500, 16 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="World/rigid"]
polygon = PoolVector2Array( 1, -1, 1, 1, -1, 1, -1, -1 )

[node name="MeshInstance2D" type="Sprite" parent="World/rigid"]
scale = Vector2( 0.031, 0.031 )
texture = ExtResource( 2 )

[node name="rigid2" type="StaticBody2D" parent="World"]
position = Vector2( 93.9474, 208.111 )
scale = Vector2( 16, 500 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="World/rigid2"]
polygon = PoolVector2Array( 1, -1, 1, 1, -1, 1, -1, -1 )

[node name="MeshInstance2D" type="Sprite" parent="World/rigid2"]
scale = Vector2( 0.031, 0.031 )
texture = ExtResource( 2 )

[node name="rigid3" type="StaticBody2D" parent="World"]
position = Vector2( 888.338, 217.625 )
scale = Vector2( 16, 500 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="World/rigid3"]
polygon = PoolVector2Array( 1, -1, 1, 1, -1, 1, -1, -1 )

[node name="MeshInstance2D" type="Sprite" parent="World/rigid3"]
scale = Vector2( 0.031, 0.031 )
texture = ExtResource( 2 )

[node name="rigid4" type="StaticBody2D" parent="World"]
position = Vector2( 503.035, 498.278 )
scale = Vector2( 500, 16 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="World/rigid4"]
polygon = PoolVector2Array( 1, -1, 1, 1, -1, 1, -1, -1 )

[node name="MeshInstance2D" type="Sprite" parent="World/rigid4"]
scale = Vector2( 0.031, 0.031 )
texture = ExtResource( 2 )

[node name="Hud" type="CanvasLayer" parent="."]
script = ExtResource( 6 )

[node name="TextStuff" parent="Hud" instance=ExtResource( 5 )]

[connection signal="body_entered" from="Objects/Player/interact" to="Objects/Player" method="_on_interact_body_entered"]
[connection signal="body_exited" from="Objects/Player/interact" to="Objects/Player" method="_on_interact_body_exited"]
[connection signal="doClose" from="Hud/TextStuff" to="Hud" method="_on_TextStuff_doClose"]
